--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
@@ -32,6 +33,7 @@
     "remove-accents": "^0.4.4",
     "request": "^2.88.2",
     "sanitize-filename": "^1.6.3",
+    "tiny-csrf": "^1.1.3",
     "uuid": "^9.0.0"
   }
 }
